pactometro service realizado

--- a/nombreProyecto/src/app/app.component.html
+++ b/nombreProyecto/src/app/app.component.html
@@ -99,6 +99,16 @@
     <app-nombre-componente></app-nombre-componente>
   </div>  
 
+  <div>
+    <app-nuevo> </app-nuevo>
+  </div>
+
+  <div>
+    <app-pactometro> </app-pactometro>
+  </div>
+
+
+
   <!-- Next Steps -->
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
